Fixed resume download link

--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
     </p>
   </div>
   <div class="blob"></div>
+  <a href="assets/pdf/AnushkaVyas_FullStack_Resume.pdf" download class="resume-btn">
+  📄 Download Resume
+</a>
+
+   Download Resume
+</a>
+
 </section>
 
 
